--- a/hypr/envs.conf
+++ b/hypr/envs.conf
@@ -1,5 +1,11 @@
-env = WLR_RENDERER,vulkan
 env = WLR_NO_HARDWARE_CURSORS,1
-env = WLR_EGL_NO_MODIFIERS,1
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+# env = WLR_RENDERER,vulkan
+# env = WLR_NO_HARDWARE_CURSORS,1
+# env = WLR_EGL_NO_MODIFIERS,1
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# # env = XCURSOR_THEME,Breeze_Light
+# # env = XCURSOR_SIZE,28
