--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,3 +23,9 @@ source = ~/.config/hypr/windows.conf
 # source = ~/.cache/wallust/colors-hyprland.conf
 
 # source = ~/.config/hypr/hyprpaper.conf
+exec-once = /usr/lib/gvfs/gvfsd
+exec-once = /usr/lib/gvfs/gvfs-udisks2-volume-monitor
+exec-once = /usr/lib/gvfs/gvfs-mtp-volume-monitor
+exec-once = /usr/lib/gvfs/gvfs-gphoto2-volume-monitor
+exec-once = /usr/lib/gvfs/gvfs-afc-volume-monitor
+
