--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -43,7 +43,7 @@ bind = $mainMod SHIFT, eacute, movetoworkspace, 2
 bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
 bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
 bind = $mainMod SHIFT, parenleft, movetoworkspace, 5
-bind = $mainMod SHIFT, section, movetoworkspace, 6
+bind = $mainMod SHIFT, minus, movetoworkspace, 6
 bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, exclam, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
