--- a/hypr/look.conf
+++ b/hypr/look.conf
@@ -11,7 +11,7 @@ general {
 decoration {
     rounding = 10
 
-    active_opacity = 0.8
+    active_opacity =  0.88
     inactive_opacity =0.9
     fullscreen_opacity = 1
 
@@ -29,8 +29,9 @@ decoration {
 
     blur {
     enabled = true
-    size = 6
-    passes = 2
+    size = 5
+    passes = 3
+    # vibrancy = 3
     ignore_opacity = true
     new_optimizations = true
     special = true
