--- a/hypr/vars.conf
+++ b/hypr/vars.conf
@@ -2,7 +2,7 @@
 $menu = rofi -show drun
 $terminal = alacritty
 $fileManager = dolphin
-$browser = firefox
+$browser = vivaldi
 $notes = obsidian
 $editor = code
 $editor-alt = subl
