--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -9,7 +9,6 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, P, exec, $wall
-bind = $mainMod, G, exec, $tasks
 bind = $mainMod, Z, togglefloating,
 bind = ALT, space, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
@@ -43,7 +42,7 @@ bind = $mainMod SHIFT, eacute, movetoworkspace, 2
 bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
 bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
 bind = $mainMod SHIFT, parenleft, movetoworkspace, 5
-bind = $mainMod SHIFT, minus, movetoworkspace, 6
+bind = $mainMod SHIFT, section, movetoworkspace, 6
 bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, exclam, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
@@ -82,7 +81,7 @@ bind = SUPER, V, exec, ~/.config/hypr/scripts/clipboard_select.sh
 # bind = SUPER, V, exec, cliphist list | tofi -c ~/.config/tofi/configV | cliphist decode | wl-copy
 # bind = SUPER, V, exec, cliphist list | rofi -dmenu -display-columns 2 | cliphist decode | wl-copy
 # Colour Picker
-bind = $mainMod, P, exec, $colorPicker | wl-copy
+# bind = $mainMod, P, exec, $colorPicker | wl-copy
 
 # Screen locking
 bind = SUPER, L, exec, hyprlock
@@ -96,9 +95,9 @@ bind = SUPER, D, exec, killall waybar || waybar # toggle waybar
 
 # Screenshot
 # add --cursor flag to include cursor also, --freeze flag to freeze before selection
-bind = , Print, exec, sh -c 'grimblast --notify copysave screen /mnt/storage/Pictures/screenshots/screen_$(date +%F_%H-%M-%S).png'
-bind = SUPER, Print, exec, sh -c 'grimblast --notify copysave active /mnt/storage/Pictures/screenshots/active_$(date +%F_%H-%M-%S).png'
-bind = SUPER ALT, Print, exec, sh -c 'grimblast --notify copysave area /mnt/storage/Pictures/screenshots/area_$(date +%F_%H-%M-%S).png'
+bind = , Print, exec, sh -c 'grimblast --notify copysave screen /home/dya/Pictures/screenshots/screen_$(date +%F_%H-%M-%S).png'
+bind = SUPER, Print, exec, sh -c 'grimblast --notify copysave active /home/dya/Pictures/screenshots/active_$(date +%F_%H-%M-%S).png'
+bind = SUPER ALT, Print, exec, sh -c 'grimblast --notify copysave area /home/dya/Pictures/screenshots/area_$(date +%F_%H-%M-%S).png'
 
 
 
