--- a/hypr/vars.conf
+++ b/hypr/vars.conf
@@ -1,11 +1,10 @@
 
-$menu = rofi -show drun
+$menu = rofi -show
 $terminal = alacritty
-$fileManager = dolphin
-$browser = vivaldi
+$fileManager = nemo
+$browser = firefox
 $notes = obsidian
 $editor = code
 $editor-alt = subl
 $colorPicker = hyprpicker
 $wall = waypaper
-$tasks = gtk-launch tasks
