--- a/hypr/windows.conf
+++ b/hypr/windows.conf
@@ -2,17 +2,17 @@ windowrulev2 = float, class:(clipse)
 windowrulev2 = size 622 652, class:(clipse)
 windowrulev2 = stayfocused, class:(clipse)
 
-layerrule = blur, wofi
+# layerrule = blur, wofi
 
-windowrule=opacity 0.85, class:Alacritty 
-windowrule=opacity 0.80,class:waypaper 
-# windowrule=opacity 0.90,brave-browser 
-windowrule=opacity 0.80,class:clipse 
-windowrule=opacity 0.85,class:thunar 
-windowrule=opacity 0.85,class:obsidian 
-windowrule=opacity 0.85,class:org.telegram.desktop 
-windowrule=opacity 0.85,class:jetbrains-clion 
-windowrule = float, class:waypaper
+# windowrule=opacity 0.85, class:Alacritty 
+# windowrule=opacity 0.80,class:waypaper 
+# # windowrule=opacity 0.90,brave-browser 
+# windowrule=opacity 0.80,class:clipse 
+# windowrule=opacity 0.85,class:thunar 
+# windowrule=opacity 0.85,class:obsidian 
+# windowrule=opacity 0.85,class:org.telegram.desktop 
+# windowrule=opacity 0.85,class:jetbrains-clion 
+# windowrule = float, class:waypaper
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
