--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -95,9 +95,9 @@ bind = SUPER, D, exec, killall waybar || waybar # toggle waybar
 
 # Screenshot
 # add --cursor flag to include cursor also, --freeze flag to freeze before selection
-bind = , Print, exec, sh -c 'grimblast --notify copysave screen /home/dya/Pictures/screenshots/screen_$(date +%F_%H-%M-%S).png'
-bind = SUPER, Print, exec, sh -c 'grimblast --notify copysave active /home/dya/Pictures/screenshots/active_$(date +%F_%H-%M-%S).png'
-bind = SUPER ALT, Print, exec, sh -c 'grimblast --notify copysave area /home/dya/Pictures/screenshots/area_$(date +%F_%H-%M-%S).png'
+bind = , Print, exec, sh -c 'grimblast --notify copysave screen /mnt/storage/Pictures/screenshots/screen_$(date+ %F%H-%M-%S).png'
+bind = SUPER, Print, exec, sh -c 'grimblast --notify copysave active /mnt/storage/Pictures/screenshots/active_$(date +%F_%H-%M-%S).png'
+bind = SUPER ALT, Print, exec, sh -c 'grimblast --notify copysave area /mnt/storage/Pictures/screenshots/area_$(date +%F_%H-%M-%S).png'
 
 
 
